app/styles.css
/* ... */
* {
  box-sizing: border-box;
}
a {
  color: initial;
}
html, body {
  margin: 0;
  padding: 0;
  border: 0;
  height: 100%;
}
body {
  display: flex;
  align-items: center;
  justify-content: center;

  font-family: 'Nunito Sans', sans-serif;
  font-size: calc(var(--app__font__size) * 100vh);
  color: var(--app__text__color);
  background-color: var(--device_background-color);
}
.myhomeapp {
  position: relative;
  display: flex;
  height: 100%;
  width: calc(var(--device__aspect-ratio) * 100vh);
  max-width: calc(var(--device__aspect-ratio) * 100vh);
  flex-direction: column;
  background-color: var(--app__background__color);

  /* overflow: hidden; */
}
.myhomeapp header {
  flex-shrink: 0;
  height: calc(var(--app__header__height) * 100vh);
  background-color: var(--app__section--item__background__color);
  /* box-shadow: var(--app__shadow); */
  margin-bottom: calc(var(--app__header__margin) * 100vh);
  margin-top: calc((var(--app__header__margin) * 100vh) /2);
  border-radius: calc(var(--app__item__radius) * 100vh);

  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}
.myhomeapp header p {
  margin: 0;
}
.myhomeapp header .copyright {
  font-size: 0.5em;
}
.myhomeapp .view {
  flex-grow: 1;
  display: flex;
  flex-direction: column;
  align-items: stretch;
  height: 100%;
}
.myhomeapp .view--left-sidebar, .view--right-sidebar {
  background-color: var(--app__background__color);
  width: calc(var(--device__sidebar__width) * 100vh);
  height: 100%;

  position: absolute;
  left: calc(var(--device__sidebar__width) * 100vh * -1);
  top: 0;
  z-index: 0;
}
.myhomeapp .view--right-sidebar {
  left: unset;
  right: calc(var(--device__sidebar__width) * 100vh * -1);
}
.myhomeapp .sidebar-item {
  /* border: 1px solid #333; */
  background-color: var(--app__section--item__background__color);
  border-radius: calc(var(--app__item__radius) * 100vh);
  font-size: var(--app__font__size--small);
  font-weight: 700;
  text-align: center;
  margin: calc((var(--app__header__margin) * 100vh) /2) calc((var(--app__header__margin) * 100vh) /4);
  padding: calc((var(--app__header__margin) * 100vh) / 2);
  
}
.myhomeapp .view--left-sidebar .view--logo-section {
  height: calc(30vh - ((var(--app__header__margin) * 100vh)));
}
.myhomeapp .view--left-sidebar .view--selection-section{
  height:calc(70vh - ((var(--app__header__margin) * 100vh) / 2));
}

.myhomeapp .view--left-sidebar .selection-count-item {

}
.myhomeapp .view--left-sidebar .view--logo-container img{
  max-width: 100%;
  max-height: 100%;
}

.myhomeapp .view--swipelist .item {
  border-radius: calc(var(--app__item__radius) * 100vh);
  background-color: var(--app__item__color);
  margin: 0 calc(var(--app__item__margin) * 100vh);
  box-shadow: var(--app__shadow);
  will-change: transform;
  overflow: hidden;
  position: absolute;

  display: flex;
  flex-direction: column;
  align-items: stretch;
}
.myhomeapp .view--swipelist .item picture {
  position: relative;
  width: 100%;
  flex-grow: 0;
  background-size: cover;
  background-position: 50% 50%;
  background-repeat: no-repeat;
}
.myhomeapp .view--swipelist .item picture:before {
  content: '';
  display: block;
  width: 100%;
  opacity: 0;
  pointer-events: none;
  padding-bottom: 100%;
}

.myhomeapp .view--details .item__details,
.myhomeapp .view--swipelist .item__details {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  align-content: center;
  flex-grow: 1;
  padding: calc(var(--app__item__details__padding) * 100vh);
}
.myhomeapp .view--details .item__details {
  flex-grow: 0;
  flex-shrink: 0;
}
.myhomeapp .view--swipelist .item .action {
  position: absolute;
  font-size: calc(var(--app__action__size) * 100vh);
  text-transform: uppercase;
  border: calc(var(--app__action__border) * 100vh) solid black;
  border-radius: calc(var(--app__action__border) * 100vh);
  padding: calc(var(--app__action__padding) * 100vh / 2) calc(var(--app__action__padding) * 100vh);
  text-align: center;
  transform-origin: 50% 50%;
  will-change: opacity;
  opacity: 0;
  user-select: none;
}
.myhomeapp .view--swipelist .item .action--nope {
  right: calc(var(--app__action__offset) * 100vh);
  top: calc(var(--app__action__offset) * 100vh);
  color: var(--app__action--nope__color);
  border-color: var(--app__action--nope__color);
  transform: rotate(calc(var(--app__action__rotation) * 1));
}
.myhomeapp .view--swipelist .item .action--like {
  left: calc(var(--app__action__offset) * 100vh);
  top: calc(var(--app__action__offset) * 100vh);
  color: var(--app__action--like__color);
  border-color: var(--app__action--like__color);
  transform: rotate(calc(var(--app__action__rotation) * -1));
}
.myhomeapp .view--swipelist .item .action--superlike {
  bottom: calc(var(--app__action__offset) * 100vh);
  left: 50%;
  transform: rotate(calc(var(--app__action__rotation) * -1)) translateX(-50%) ;
  color: var(--app__action--superlike__color);
  border-color: var(--app__action--superlike__color);
}
.hidden {
  display: none !important;
}
.myhomeapp .view--swipelist .item__details,
.myhomeapp .view--swipelist nav {
  opacity: 1;
  transition: opacity 0.15s ease-in-out;
  -webkit-user-select: none;
     -moz-user-select: none;
      -ms-user-select: none;
          user-select: none;
}
.myhomeapp .view--swipelist.overlaid picture {
  visibility: hidden;
}
.myhomeapp .view--swipelist.overlaid .item__details,
.myhomeapp .view--swipelist.overlaid nav {
  opacity: 0;
}
.myhomeapp .view--swipelist + .view--details section,
.myhomeapp .view--swipelist + .view--details nav {
  transition: transform 0.15s ease-in-out;
}
.myhomeapp .view--swipelist.overlaid + .view--details section,
.myhomeapp .view--swipelist.overlaid + .view--details nav {
  transform: translateY(50vh);
}
.myhomeapp .view--swipelist__controls {
  margin-top: auto;
}
/* ... */

